// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering as a reply 1`] = `
[
  {
    "node": <Tweet
      excludeUsersInReply={
        [
          "56789",
        ]
      }
      placeId="55555"
      poll={
        {
          "durationMinutes": 60,
          "options": [
            "foo",
            "bar",
            "baz",
          ],
        }
      }
    >
      Hello World
    </Tweet>,
    "path": "$",
    "type": "unit",
    "value": {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": {
        "method": "POST",
        "params": {
          "direct_message_deep_link": undefined,
          "for_super_followers_only": undefined,
          "geo": {
            "place_id": "55555",
          },
          "media": undefined,
          "poll": {
            "duration_minutes": 60,
            "options": [
              "foo",
              "bar",
              "baz",
            ],
          },
          "quote_tweet_id": undefined,
          "reply": {
            "exclude_reply_user_ids": [
              "56789",
            ],
            "in_reply_to_tweet_id": "",
          },
          "reply_settings": undefined,
          "text": "Hello World",
        },
        "url": "2/tweets",
      },
      "type": "tweet",
    },
  },
]
`;

exports[`rendering to agent's page 1`] = `
[
  {
    "node": <Tweet
      quoteTweetId="67890"
      replySetting="following"
      superFollowersOnly={true}
    >
      Hello World
    </Tweet>,
    "path": "$",
    "type": "unit",
    "value": {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": {
        "method": "POST",
        "params": {
          "direct_message_deep_link": undefined,
          "for_super_followers_only": true,
          "geo": undefined,
          "media": undefined,
          "poll": undefined,
          "quote_tweet_id": "67890",
          "reply": undefined,
          "reply_settings": "following",
          "text": "Hello World",
        },
        "url": "2/tweets",
      },
      "type": "tweet",
    },
  },
]
`;

exports[`rendering with media 1`] = `
[
  {
    "node": <Tweet
      media={
        <Sociably.Fragment>
          <Photo
            mediaId="123"
          />
          <Photo
            url="http://foo.bar/baz.png"
          />
          <Photo
            file={
              {
                "contentLength": 123,
                "contentType": "image/jpeg",
                "data": {
                  "data": [
                    102,
                    111,
                    111,
                  ],
                  "type": "Buffer",
                },
              }
            }
          />
        </Sociably.Fragment>
      }
      superFollowersOnly={true}
      tagUsersInMedia={
        [
          "56789",
        ]
      }
    />,
    "path": "$",
    "type": "unit",
    "value": {
      "accomplishRequest": [Function],
      "mediaSources": [
        {
          "id": "123",
          "params": {
            "additional_owners": undefined,
            "media_category": undefined,
            "shared": undefined,
          },
          "type": "id",
        },
        {
          "params": {
            "additional_owners": undefined,
            "media_category": "tweet_image",
            "shared": undefined,
          },
          "type": "url",
          "url": "http://foo.bar/baz.png",
        },
        {
          "assetTag": undefined,
          "file": {
            "contentLength": 123,
            "contentType": "image/jpeg",
            "data": {
              "data": [
                102,
                111,
                111,
              ],
              "type": "Buffer",
            },
          },
          "params": {
            "additional_owners": undefined,
            "media_category": "tweet_image",
            "media_type": "image/jpeg",
            "shared": undefined,
            "total_bytes": 123,
          },
          "type": "file",
        },
      ],
      "request": {
        "method": "POST",
        "params": {
          "direct_message_deep_link": undefined,
          "for_super_followers_only": true,
          "geo": undefined,
          "media": {
            "media_ids": [],
            "tagged_user_ids": [
              "56789",
            ],
          },
          "poll": undefined,
          "quote_tweet_id": undefined,
          "reply": undefined,
          "reply_settings": undefined,
          "text": undefined,
        },
        "url": "2/tweets",
      },
      "type": "tweet",
    },
  },
]
`;

exports[`spliting long content into tweet thread 1`] = `
[
  {
    "node": <Tweet
      placeId="98765"
      quoteTweetId="67890"
      replySetting="following"
      superFollowersOnly={true}
    >
      國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國囧國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國
    </Tweet>,
    "path": "$",
    "type": "unit",
    "value": {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": {
        "method": "POST",
        "params": {
          "direct_message_deep_link": undefined,
          "for_super_followers_only": true,
          "geo": {
            "place_id": "98765",
          },
          "media": undefined,
          "poll": undefined,
          "quote_tweet_id": "67890",
          "reply": undefined,
          "reply_settings": "following",
          "text": "國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國 國國國國國國",
        },
        "url": "2/tweets",
      },
      "type": "tweet",
    },
  },
  {
    "node": <Tweet
      placeId="98765"
      quoteTweetId="67890"
      replySetting="following"
      superFollowersOnly={true}
    >
      國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國囧國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國
    </Tweet>,
    "path": "$",
    "type": "unit",
    "value": {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": {
        "method": "POST",
        "params": {
          "text": "國國國國國國國國國國國國國國國國囧國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國",
        },
        "url": "2/tweets",
      },
      "type": "tweet",
    },
  },
  {
    "node": <Tweet
      placeId="98765"
      quoteTweetId="67890"
      replySetting="following"
      superFollowersOnly={true}
    >
      國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國囧國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國 國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國
    </Tweet>,
    "path": "$",
    "type": "unit",
    "value": {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": {
        "method": "POST",
        "params": {
          "text": "國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國國",
        },
        "url": "2/tweets",
      },
      "type": "tweet",
    },
  },
]
`;
